--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     margin: 40px 20px;
     overflow: hidden;
 }
